drawioの色を追加、デザインの修正

--- a/grid12.css
+++ b/grid12.css
@@ -1,4 +1,4 @@
-/* @theme grid12 */
+/* @theme grid12test */
 
 @import "default";
 
@@ -9,11 +9,142 @@
     --l: 1;
     --r: -1;
 
-    --underline-color: rgb(0, 0, 0);
-    --highlight-color: rgba(255, 255, 0, 0.5);
-    --h1-color: rgb(0, 0, 0);
-    --color-background-paginate: rgba(32, 32, 40, 0.05);
+    /* 見出しの色 */
+    --h1-color: var(--black1);
+    /* ページ数表示の表示の背景色 */
+    --color-background-paginate: var(--white2);
+    /* 下線の色(underline color) */
+    --ul: none;
+    /* 文字の背景色の色(highlight color) */
+    --hl: none;
+
+    /* 枠の色(frame border color) */
+    --fb: var(--black1);
+    /* 枠の背景色(frame background color) */
+    --fbg: none;
+
+    /* drawioのパレットの色 */
+    --white1: #ffffff;
+    --white2: #e6e6e6;
+    --white3: #cccccc;
+    --white4: #b3b3b3;
+    --white5: #999999;
+    --white6: #808080;
+    --white7: #666666;
+    --white8: #4d4d4d;
+    --white9: #333333;
+    --white10: #1a1a1a;
+    --black1: #000000;
+    --red1: #ffcccc;
+    --red2: #ff9999;
+    --red3: #ff6666;
+    --red4: #ff3333;
+    --red5: #ff0000;
+    --red6: #cc0000;
+    --red7: #990000;
+    --red8: #660000;
+    --red9: #330000;
+    --orange1: #ffe6cc;
+    --orange2: #ffcc99;
+    --orange3: #ffb366;
+    --orange4: #ff9933;
+    --orange5: #ff8000;
+    --orange6: #cc6600;
+    --orange7: #994c00;
+    --orange8: #663300;
+    --orange9: #331a00;
+    --yellow1: #ffffcc;
+    --yellow2: #ffff99;
+    --yellow3: #ffff66;
+    --yellow4: #ffff33;
+    --yellow5: #ffff00;
+    --yellow6: #cccc00;
+    --yellow7: #999900;
+    --yellow8: #666600;
+    --yellow9: #333300;
+    --yellowGreen1: #E6FFCC;
+    --yellowGreen2: #CCFF99;
+    --yellowGreen3: #B3FF66;
+    --yellowGreen4: #99FF33;
+    --yellowGreen5: #80FF00;
+    --yellowGreen6: #66CC00;
+    --yellowGreen7: #4d9900;
+    --yellowGreen8: #336600;
+    --yellowGreen9: #1A3300;
+    --green1: #ccffcc;
+    --green2: #99ff99;
+    --green3: #66ff66;
+    --green4: #33ff33;
+    --green5: #00ff00;
+    --green6: #00cc00;
+    --green7: #009900;
+    --green8: #006600;
+    --green9: #003300;
+    --cyanGreen1: #ccffe6;
+    --cyanGreen2: #99ffcc;
+    --cyanGreen3: #66ffb3;
+    --cyanGreen4: #33ff99;
+    --cyanGreen5: #00ff80;
+    --cyanGreen6: #00cc66;
+    --cyanGreen7: #00994d;
+    --cyanGreen8: #006633;
+    --cyanGreen9: #00331a;
+    --cyan1: #ccffff;
+    --cyan2: #99ffff;
+    --cyan3: #66ffff;
+    --cyan4: #33ffff;
+    --cyan5: #00ffff;
+    --cyan6: #00cccc;
+    --cyan7: #009999;
+    --cyan8: #006666;
+    --cyan9: #003333;
+    --cyanBlue1: #cce5ff;
+    --cyanBlue2: #99ccff;
+    --cyanBlue3: #66b2ff;
+    --cyanBlue4: #3399ff;
+    --cyanBlue5: #007fff;
+    --cyanBlue6: #0066cc;
+    --cyanBlue7: #004c99;
+    --cyanBlue8: #003366;
+    --cyanBlue9: #001933;
+    --blue1: #ccccff;
+    --blue2: #9999ff;
+    --blue3: #6666ff;
+    --blue4: #3333ff;
+    --blue5: #0000ff;
+    --blue6: #0000cc;
+    --blue7: #000099;
+    --blue8: #000066;
+    --blue9: #000033;
+    --purple1: #e5ccff;
+    --purple2: #cc99ff;
+    --purple3: #b266ff;
+    --purple4: #9933ff;
+    --purple5: #7f00ff;
+    --purple6: #6600cc;
+    --purple7: #4c0099;
+    --purple8: #330066;
+    --purple9: #190033;
+    --pink1: #ffccff;
+    --pink2: #ff99ff;
+    --pink3: #ff66ff;
+    --pink4: #ff33ff;
+    --pink5: #ff00ff;
+    --pink6: #cc00cc;
+    --pink7: #990099;
+    --pink8: #660066;
+    --pink9: #330033;
+    --pinkRed1: #ffcce6;
+    --pinkRed2: #ff99cc;
+    --pinkRed3: #ff66b3;
+    --pinkRed4: #ff3399;
+    --pinkRed5: #ff0080;
+    --pinkRed6: #cc0066;
+    --pinkRed7: #99004d;
+    --pinkRed8: #660033;
+    --pinkRed9: #33001a;
 }
+
 
 header {
     top: 0px;
@@ -33,7 +164,7 @@ section {
 
 
 section>h1:first-of-type {
-    /* ページのタイトル */
+    /* ページの見出しのデザイン */
     grid-column: 1 / -1;
     grid-row: 1;
     padding: 0;
@@ -43,38 +174,31 @@ section>h1:first-of-type {
 }
 
 section :not(header, footer) {
+    /* grid上の配置を指定 */
     grid-column: var(--l) / var(--r);
     grid-row: var(--t) / var(--b);
 }
 
 section::after {
-    /* ページ数 */
+    /* ページ数のデザイン */
     position: absolute;
-    padding-right: 30px;
-    padding-left: 60px;
-    padding-bottom: 21px;
-    padding-top: 42px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
     right: 0;
     bottom: 0;
     font-size: 24px;
     color: var(--paginate-color);
-    background: linear-gradient(-45deg,
-            var(--color-background-paginate) 50%,
-            transparent 50%);
+    background: var(--color-background-paginate);
 }
 
-section.title h1 {
-    grid-row: 6;
-    text-align: center;
-}
-
-section.title :not(h1) {
-    grid-row: 7/12;
-    text-align: center;
-}
-
+/* 参考文献のデザイン */
 section div.bib {
-    /* 参考文献 */
+    position: absolute;
+    bottom: -20px;
     padding: 0;
     margin: 0;
     font-size: 0.5em;
@@ -86,20 +210,39 @@ section div.bib * {
     margin: 0;
 }
 
-section span.underline {
-    /* 下線 */
-    border-bottom: 3px solid var(--underline-color);
+/* span要素のデザイン */
+section span {
+    border-bottom: 3px solid var(--ul);
+    background-color: var(--hl);
 }
 
-section span.highlight {
-    /* 文字の背景色 */
-    background-color: var(--highlight-color);
-}
-
-section .frame {
-    /* 枠 */
-    border: 1px solid black;
+/* 枠 */
+section div.frame {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 3px solid var(--fb);
+    background-color: var(--fbg);
     border-radius: 10px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
+    margin: 5px 0px;
+    padding: 0px 10px;
+}
+
+section div.frame *:first-child {
+    margin-top: 0;
+}
+
+section div.frame *:last-child {
+    margin-bottom: 0;
+}
+
+/* タイトルデザイン */
+section.title h1 {
+    grid-row: 6;
+    text-align: center;
+}
+
+section.title :not(h1) {
+    grid-row: 7/12;
+    text-align: center;
 }
