--- a/grid12.css
+++ b/grid12.css
@@ -199,7 +199,7 @@ section::after {
 /* 参考文献のデザイン */
 section div.bib {
     position: absolute;
-    bottom: -20px;
+    bottom: 0;
     padding: 0;
     margin: 0;
     font-size: 0.5em;
