タイトル部分を全体の上下中央揃えとする

--- a/digital/digital.css
+++ b/digital/digital.css
@@ -246,6 +246,8 @@ section.title {
 section.title h1 {
     font-size: 2em;
     color: var(--white1);
+    grid-column: 1/-1;
+    grid-row: 1/-1
 }
 
 /* アウトラインクラス */
